--- a/devspace.yaml
+++ b/devspace.yaml
@@ -3,11 +3,11 @@ version: v1beta11
 # `vars` specifies variables which may be used as ${VAR_NAME} in devspace.yaml
 vars:
 - name: IMAGE
-  value: docker.nexus.farmvivi.fr/vvaizand/project/app
+  value: docker.nexus.farmvivi.fr/admin/project/app
 
 # `deployments` tells DevSpace how to deploy this project
 deployments:
-- name: site
+- name: rady-site
   # This deployment uses `helm` but you can also define `kubectl` deployments or kustomizations
   helm:
     # We are deploying the so-called Component Chart: https://devspace.sh/component-chart/docs
@@ -23,19 +23,6 @@ deployments:
 
 # `dev` only applies when you run `devspace dev`
 dev:
-  # `dev.ports` specifies all ports that should be forwarded while `devspace dev` is running
-  # Port-forwarding lets you access your application via localhost on your local machine
-  ports:
-  - imageSelector: ${IMAGE} # Select the Pod that runs our `${IMAGE}`
-    forward:
-    - port: 8080
-      remotePort: 80
-
-  # `dev.open` tells DevSpace to open certain URLs as soon as they return HTTP status 200
-  # Since we configured port-forwarding, we can use a localhost address here to access our application
-  open:
-  - url: http://localhost:8080
-
   # `dev.sync` configures a file sync between our Pods in k8s and your local project files
   sync:
   - imageSelector: ${IMAGE} # Select the Pod that runs our `${IMAGE}`
