--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            docker.nexus.farmvivi.fr/rady/site
+            docker.nexus.farmvivi.fr/cnam/rady/site
           # generate Docker tags based on the following events/attributes
           tags: |
             type=ref,event=branch
